# TestTaskForAurigma

./: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  DummyEye.cpp
lib/: Bitmap.cpp  CMakeLists.txt  Colors.cpp  Figure.cpp  UserInterface.cpp  engine.cpp
lib/Figure_sources/: FigureAbstractObject.cpp  FigureBezierBurve3.cpp  FigureContainer.cpp  FigureEllipse.cpp  FigureLine.cpp  FigurePoint.cpp
lib/Headers/: Bitmap.h  Colors.h  Figure.h  Matrix.h  UserInterface.h  engine.h
tests/: CMakeLists.txt  tests.cpp
